--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,20 @@
-//
+/* custom.scss */
+
+/* import the necessary Bootstrap files */
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+
+/* -------begin customization-------- */
+$khaki:   #f6eb8f !default;
+$brand-blue: #41e9d1 !default;
+// $body-color: $brand-blue;
+$body-bg: $brand-blue;
+
+/* or, use an existing variable */
+$theme-colors: (
+    primary: darken($brand-blue, 10%)
+);
+/* -------end customization-------- */
+
+/* finally, import Bootstrap to set the changes! */
+@import '~bootstrap/scss/bootstrap';
